# ocaml-cli

./: .gitignore  README.md  catr.opam  cli.opam  dune-project  echor.opam  justfile
catr/: catr.opam  dune  dune-project  main.ml
catr/lib/: dune
catr/test/: dune
echor/: dune  dune-project
echor/lib/: dune
echor/test/: dune
echor/test/echor.t/: run.t
test/: dune
test-harness/: Cargo.toml  justfile
test-harness/tests/: cli.rs
test-harness/tests/calr/: cli.rs
test-harness/tests/catr/: cli.rs
test-harness/tests/commr/: cli.rs
test-harness/tests/cutr/: cli.rs
test-harness/tests/echor/: cli.rs
test-harness/tests/findr/: cli.rs
test-harness/tests/fortuner/: cli.rs
test-harness/tests/grepr/: cli.rs
test-harness/tests/headr/: cli.rs
test-harness/tests/lsr/: cli.rs  set-test-perms.sh
test-harness/tests/tailr/: cli.rs
test-harness/tests/uniqr/: cli.rs
test-harness/tests/wcr/: cli.rs
test/calr/: dune  test_calr.ml
test/catr/: dune  test_catr.ml
test/catr.t/: run.t
test/cli_test/: cli_test.ml  dune
test/commr/: dune  test_commr.ml
test/cram/: catr.t  dune  echor.t
test/cutr/: dune  test_cutr.ml
test/echor/: dune  test_echor.ml
test/findr/: dune  test_findr.ml
test/findr/expected/: name_a.txt  name_csv.txt  name_csv_mp3.txt  name_txt_path_a_d.txt  path1.txt  path_a.txt  path_a_b.txt  (+18 more)
test/fortuner/: dune  test_fortuner.ml
test/grepr/: dune  test_grepr.ml
test/headr/: dune  test_headr.ml
test/lsr/: dune  test_lsr.ml
test/tailr/: dune  test_tailr.ml
test/uniqr/: dune  test_uniqr.ml
test/wcr/: dune  test_wcr.ml
(+152 files in other folders)
